Closed
Bug 30300
Opened 25 years ago
Closed 25 years ago
font prefs not reflected in rendering of any pages
Categories
(Core Graveyard :: GFX, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: cartwright, Assigned: garywade)
References
()
Details
From Bugzilla Helper:
User-Agent: Mozilla/4.61 (Macintosh; I; PPC)
BuildID: 2000022414
I set my font preferences in the Appearance/Fonts tab of the Edit >
Preferences... dialog. The preference settings stick, both within and across
sessions. However, I never see the changed fonts rendered in my browser window.
I have test this with pages that I've written that DO NOT use any <FONT> tags.
Changes to the font SIZE are properly reflected.
Reproducible: Always
Steps to Reproduce:
1. Go to a page without <FONT> tags.
2. Change the font face to something really odd.
3. Reload the page. No font change.
Actual Results: No font change.
Expected Results: The display font should have changed.
![]() |
||
Comment 1•25 years ago
|
||
This is working in the current build. 3/16/2000 mozilla.
this was probably a dup of bug #24343
Status: UNCONFIRMED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Comment 2•25 years ago
|
||
In the May 22 Mac build, these font changes are not applied on Mac. Reopening
bug.
Status: RESOLVED → UNCONFIRMED
Resolution: FIXED → ---
Updated•25 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
![]() |
||
Comment 3•25 years ago
|
||
It is working with 5/22/2000 build on WINNT. Don can you take a look at this on
the Mac?
Assignee: kmcclusk → dcone
![]() |
||
Comment 4•25 years ago
|
||
This is a dup, or close to bug #24343, which is an nsbeta2 bug, reading bug
24343 is seems the same but I will let you make that decision.
Thanks Gary
Assignee: dcone → garywade
![]() |
Assignee | |
Updated•25 years ago
|
Status: NEW → ASSIGNED
![]() |
Assignee | |
Comment 5•25 years ago
|
||
This bug was almost fixed in the referenced/duplicate, but I made a more complete
fix in order to complete Bug 6588.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago → 25 years ago
Resolution: --- → FIXED
Updated•16 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•