Bug 30300/6588Fixed the way that font preferences were proliferated in order that the user-defined font settings could be used.